--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Source Code Pro', monospace;
+  color: #ffffff;
+  scroll-behavior: smooth;
+  text-decoration: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body::-webkit-scrollbar {
+  width: 4px;
+}
+
+body::-webkit-scrollbar-track {
+  background: linear-gradient(180deg, #000000, #5F0A87);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #ffffff;
+}
+
+.codetexo-section-heading {
+  padding: 88px 16px 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2vw;
+}
+
+.codetexo-section-content {
+  width: 100%;
+  max-width: 1400px;
+  margin: auto;
+  padding: 8px 16px;
 }
